// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackButton > matches snapshot with custom text 1`] = `
<div>
  <button
    aria-label="Custom Text"
    class="back-button"
  >
    ❮ 
    Custom Text
  </button>
</div>
`;

exports[`BackButton > matches snapshot with default props 1`] = `
<div>
  <button
    aria-label="Go back to the previous page"
    class="back-button"
  >
    ❮ 
    Go back
  </button>
</div>
`;
